change website title

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -46,7 +46,7 @@
     -->
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
     <title>
-      Notus PRO React by Creative Tim | Premium UI Kit and Admin for Tailwind CSS
+      Crome
     </title>
   </head>
   <body class="text-blueGray-700 antialiased">
